<resources>
    <string name="app_name">Привычки</string>
    <string name="titleHint">Название</string>
    <string name="descriptionHint">Описание</string>
    <string name="priorityHint">Приоритет</string>
    <string name="typeLabel">Тип</string>
    <string name="good">Хорошая</string>
    <string name="bad">Плохая</string>
    <string name="countHint">Количество выполнения</string>
    <string name="periodicityHint">Периодичность</string>
    <string name="save">Сохранить</string>
    <string name="editActivityLabel">Добавление/редактирование</string>
    <string-array name="priorities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="countAndPeriodicity">%1$s, раз в %2$s</string>
    <plurals name="countPlurals">
        <item quantity="one">%1$d раз</item>
        <item quantity="few">%1$d раза</item>
        <item quantity="many">%1$d раз</item>
        <item quantity="other">%1$d раз</item>
    </plurals>
    <plurals name="daysPlurals">
        <item quantity="one">%1$d день</item>
        <item quantity="few">%1$d дня</item>
        <item quantity="many">%1$d дней</item>
        <item quantity="other">%1$d дней</item>
    </plurals>
    <string name="goodorbad">goodOrBad</string>
    <string name="home">Домой</string>
    <string name="info">Информация</string>
    <string name="launchericon">launcherIcon</string>
    <string name="version">Версия приложения: 0</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="mailToLabel">Обратная связь</string>
    <string name="email">ilya.vl.moskvin@gmail.com</string>
    <string name="goods">Хорошие</string>
    <string name="bads">Плохие</string>

    <string name="bottomSheetTitle">Фильтры и сортировки</string>
    <string name="sortLabel">Сортировать по приоритету</string>
    <string name="searchHint">Найти</string>

    <string name="downloadLabel">Загрузить привычки с сервера</string>
    <string name="uploadLabel">Выгрузить привычки на сервер</string>
    <string name="backupTitle">Загрузка/выгрузка привычек</string>
    <string name="apiToken">6dc67604-1dff-4217-ad52-146136ef24de</string>
    <string name="backupDone">Готово</string>
    <string name="backupFailed">Не вышло</string>
    <string name="shouldBeFilled">Обязательно к заполнению</string>
    <string name="avatar">avatar</string>
    <string name="avatarUrl">https://sun3-11.userapi.com/c7007/v7007635/7278e/S75AP3hrmYU.jpg</string>
</resources>
