<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".EditFragment">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/defaultMargin"
            android:layout_width="@dimen/textInputWidth"
            android:layout_height="wrap_content"
            android:hint="@string/titleHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleTextField"
                style="@style/defaultPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/defaultMargin"
            android:layout_width="@dimen/textInputWidth"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionTextField"
                style="@style/defaultPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descriptionHint" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/defaultPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/priorityHint" />

        <Spinner
            android:id="@+id/prioritySpinner"
            style="@style/defaultMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/priorities"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />

        <TextView
            style="@style/defaultPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/typeLabel" />

        <RadioGroup
            android:id="@+id/typeRadioGroup"
            style="@style/defaultMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/bad"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <RadioButton
                android:id="@+id/good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good" />

            <RadioButton
                android:id="@+id/bad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/defaultMargin"
            android:layout_width="@dimen/textInputWidth"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/countTextField"
                style="@style/defaultPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/countHint"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/defaultMargin"
            android:layout_width="@dimen/textInputWidth"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/periodicityTextField"
                style="@style/defaultPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/periodicityHint"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveButton"
            style="@style/defaultMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</ScrollView>