<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".BottomSheetFragment">

    <TextView
        android:id="@+id/bottomSheetTitle"
        style="@style/defaultPadding"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomSheetTitleHeight"
        android:layout_margin="@dimen/defaultMargin"
        android:gravity="center_vertical"
        android:text="@string/bottomSheetTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomSheetTitleHeight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sortTitle"
            style="@style/defaultPadding"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/defaultMargin"
            android:text="@string/sortLabel"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/bottomSheetGuideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomSheetGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/buttonToggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/bottomSheetGuideline"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSortUp"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_arrow_upward" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSortDown"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_arrow_downward" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/defaultMargin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomSheetTitleHeight"
        android:hint="@string/searchHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchTextField"
            style="@style/defaultPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>